# This file documents the revision history for Perl extension Catalyst.

  New features:
   - Setting __PACKAGE__->config(enable_catalyst_header => 1); in your MyApp.pm
     now enables the X-Catalyst header being printed when not in debug mode.
   - Require CGI::Simple::Cookie version 1.109 to ensure support for the
     HttpOnly flag

5.80022 2010-03-28 19:43:01

  New features:
   - Log an extra line in debug mode with the response status code,
     the content type and content length if available.

  Refactoring / optimizations:
   - Display of the end of hit debug messages has been factored out into
     log_headers, log_request, log_request_headers, log_response,
     log_response_status_line and log_response_headers methods so that
     plugins which customise how much information is shown on the debug
     screen as easy to write.
   - Make all logging of request and response state get the information from
     $c->dump_these so that there is a unified point from which to hook
     in parameter filtering (for example).
   - $c->model/view/controller have become a lot faster for non-regexp names
     by using direct hash lookup instead of looping.
   - IP address => hostname mapping for the server is only done once and cached
     by Catalyst::Engine::HTTP to somewhat mitigate the problem of people
     developing on machines pointed at slow DNS servers.

  Bugs fixed:
    - DispatchType::Index's uri_for_action only returns for actions registered
      with it (prevents 'index :Path' or similar resolving to the wrong URI)
    - Make sure to construct Upload objects properly, even if there are
      multiple Content-Type headers (Closes RT#55976).

5.80021 2010-03-03 23:02:01

  Bug fixed:
   - $c->uri_for will now escape unsafe characterss in captures
     ($c->request->captures) and correctly encode utf8 charracters.

5.80020 2010-02-04 06:51:18

  New features:
    - Allow components to specify additional components to be set up by