@@ -128,6 +128,7 @@ sub prepare_path {
     else {
         $base_path = $script_name || '/';
     }
+#    $base_path .= '/' unless $base_path =~ m{/$};
 
     # If we are running as a backend proxy, get the true hostname
   PROXY_CHECK:
@@ -157,20 +158,15 @@ sub prepare_path {
     if (my $req_uri = $ENV{REQUEST_URI}) {
         $req_uri =~ s/^\Q$base_path\E//;
         $req_uri =~ s/\?.*$//;
-        if ($req_uri) {
-            # Note that if REQUEST_URI doesn't start with a /, then the user
-            # is probably using mod_rewrite or something to rewrite requests
-            # into a sub-path of their application..
+        if ($req_uri && $req_uri ne '/') {
             # This means that REQUEST_URI needs information from PATH_INFO
             # prepending to it to be useful, otherwise the sub path which is
             # being redirected to becomes the app base address which is
             # incorrect.
-            if (substr($req_uri, 0, 1) ne '/') {
-                my ($match) = $req_uri =~ m|^([^/]+)|;
-                my ($path_info_part) = $path_info =~ m|^(.*?\Q$match\E)|;
-                substr($req_uri, 0, length($match), $path_info_part)
-                    if $path_info_part;
-            }
+            my ($match) = $req_uri =~ m{^(/?[^/]+)};
+            my ($path_info_part) = $path_info =~ m|^(.*?\Q$match\E)|;
+            substr($req_uri, 0, length($match), $path_info_part)
+                if $path_info_part;
             $path_info = $req_uri;
         }
     }
