@@ -1,5 +1,10 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+  Bug fixes:
+   - Additional fix for getting the base application path right when rewriting
+     requests into an application sub path with mod_alias and mod_rewrite on
+     Apache.
+
   New features:
    - Setting __PACKAGE__->config(enable_catalyst_header => 1); in your MyApp.pm
      now enables the X-Catalyst header being printed when not in debug mode.
